--- a/home/templates/home/second.html
+++ b/home/templates/home/second.html
@@ -7,7 +7,7 @@
 
 {% block content %}
     <a href="{% url 'home' %}"class="btn btn-warning">Home page</a>
-    {{ list }}       
+    <div class="h1">second page</div>
 {% endblock %}
 
 {% block extra_js %}              
