--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,3 +13,15 @@ nav a {
     flex: 1;              
 }
 
+.overlay{
+    background: black url('/media/loading.gif') no-repeat center center;
+    opacity: 0.5;
+    width: 100%;
+    height: 100%; 
+    z-index: 2;
+    top: 0; 
+    left: 0; 
+    position: fixed; 
+    display: none;
+}
+
